Update rest_api.yml: Fix name of method for create new post

--- a/api/rest_api.yml
+++ b/api/rest_api.yml
@@ -363,6 +363,8 @@ paths:
           $ref: '#/components/responses/BadGateway'
         '504':
           $ref: '#/components/responses/GatewayTimeout'
+  
+  /posts:   
     post:
       tags:
         - Posts
